--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --montserrat-font: "Montserrat", sans-serif;
+  --regular-text-color: #303030;
+  --yellow-color: #f6cb11;
+}
+
+body {
+  margin: 0;
+  font-size: 1rem;
+  font-family: var(--montserrat-font);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
