--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -21,11 +21,13 @@ p.hero_text {
   margin-top: -1.5em;
 }
 .hero_image {
-  position: relative;
+  display: grid;
+  place-items: center;
   padding: 5em 0;
 }
 
 .hero_image img {
+  position: relative;
   width: 1100px;
   box-shadow: 5px 5px 30px rgba(223, 223, 223, 0.1),
     -5px -5px 30px rgba(223, 223, 223, 0.1);
@@ -33,8 +35,7 @@ p.hero_text {
 
 .hero_image .play_video {
   width: 100px;
-  position: absolute;
-  bottom: 315px;
-  right: 570px;
-  /* background-color: var(--yellow-color); */
+  position: relative;
+  bottom: 300px;
+  right: -10px;
 }
