made few changes

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -4,24 +4,27 @@
 }
 
 .hero_header {
-  width: 780px;
   text-align: center;
+  width: 70%;
   margin: auto;
+  max-width: 780px;
   padding-top: 4em;
 }
 
 .hero_vector1 {
   position: relative;
-  bottom: 137px;
+  bottom: 142px;
   left: 204px;
 }
 .hero_vector2 {
   display: inline-block;
   position: relative;
-  bottom: 128px;
+  bottom: 135px;
   right: 80px;
 }
 .hero_header h2 {
+  width: 100%;
+
   font-size: 3.125rem;
   font-weight: 600;
   color: var(--regular-text-color);
@@ -30,30 +33,33 @@
 p.hero_text {
   font-size: 1.18rem;
   text-align: center;
-  margin-top: -3.6em;
+  margin-top: -2em;
 }
 .hero_image {
+  width: 85%;
+  max-width: 1100px;
+  margin: auto;
   display: grid;
   place-items: center;
-  padding-top: 4em;
+  padding: 4em 0;
 }
 
 .hero_image img {
-  position: relative;
-  width: 1100px;
+  width: 100%;
   box-shadow: 5px 5px 30px rgba(223, 223, 223, 0.1),
     -5px -5px 30px rgba(223, 223, 223, 0.1);
 }
 
-.hero_image .play_video {
+/* .hero_image .play_video {
   width: 70px;
   position: relative;
   bottom: 300px;
   right: -10px;
-}
+} */
 
 .hero_description {
   text-align: center;
+  padding: 5em 0;
 }
 .hero_description h3 {
   width: 200px;
