--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -13,6 +13,8 @@
 }
 
 .welcome__text h2 {
+  max-width: 800px;
+  margin: 0 auto;
   font-size: 3rem;
   font-weight: 600;
   position: relative;
@@ -21,26 +23,33 @@
 
 .welcome__text p {
   text-align: center;
-  margin-top: -20px;
+  /* margin-top: -20px; */
   font-size: 19.2px;
   font-weight: 400;
 }
 
 .welcome__text .vector__logo {
   position: absolute;
-  top: 152px;
-  left: 660px;
+  top: 112px;
+  left: 44.6%;
+  max-width: 275px;
 }
 
 .video__container {
   display: grid;
-  width: 70%;
+  /* width: 70%; */
+  max-width: 1120px;
   margin: auto;
-  /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
   justify-content: center;
 }
 
-@media (max-width: 755px) {
+@media (max-width: 1132px) {
+  .video__container {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 994px) {
   .video__container {
     width: 90%;
   }
@@ -48,7 +57,9 @@
   .welcome__text h2 {
     font-size: 2rem;
   }
+}
 
+@media (max-width: 994px) {
   .welcome__text .vector__logo {
     display: none;
   }
@@ -56,7 +67,28 @@
 
 @media (max-width: 1400px) {
   .welcome__text .vector__logo {
-    top: 152px;
-    left: 533px;
+    top: 112px;
+    left: 43.5%;
+    /* left: 38%; */
   }
+}
+
+.about__message {
+  /* margin: auto; */
+  text-align: center;
+  padding: 10rem 0;
+  margin-top: 4rem;
+}
+
+.about__message h3 {
+  font-size: 2rem;
+  max-width: 202px;
+  margin: 0 auto;
+  border-bottom: 4px solid var(--yellow-color);
+}
+
+.about__message p {
+  max-width: 800px;
+  margin: 12px auto;
+  font-size: 1.4rem;
 }
