--- a/src/components/Header/Navbar.module.css
+++ b/src/components/Header/Navbar.module.css
@@ -1,5 +1,7 @@
 .header {
   box-shadow: 0px 6px 60px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 2;
 }
 
 .navbar {
@@ -46,10 +48,18 @@
 .navbar .menu {
   font-size: 2rem;
   color: var(--yellow-color);
+  margin-left: auto;
 }
 
 @media (min-width: 901px) {
   .navbar .menu {
     display: none;
+  }
+}
+
+@media (max-width: 901px) {
+  .navbar {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
