--- a/src/components/Blog/Blog.module.css
+++ b/src/components/Blog/Blog.module.css
@@ -1,5 +1,5 @@
 .blog__header h3 {
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: 600;
   margin-bottom: -10px;
 }
@@ -9,11 +9,12 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: start;
   gap: 2rem;
-  /* place-items: center; */
+  margin-top: 3rem;
 }
 
 .blog__item1 img {
   margin-bottom: -30px;
+  width: 100%;
 }
 
 @media (max-width: 702px) {
@@ -44,7 +45,7 @@
 /* BLOG ITEM */
 .blog__item2 {
   justify-self: start;
-  max-height: 50vh;
+  max-height: 70vh;
   overflow-y: scroll;
 }
 .blog__list {
