--- a/src/components/Properties/Properties.module.css
+++ b/src/components/Properties/Properties.module.css
@@ -61,6 +61,14 @@
 @media (max-width: 375px) {
   .estate {
     justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 420px) {
+  .estate {
+    justify-content: center;
+    align-items: center;
   }
 }
 
