--- a/src/components/Blog/Blog.module.css
+++ b/src/components/Blog/Blog.module.css
@@ -4,6 +4,19 @@
   margin-bottom: -10px;
 }
 
+.myAnimate {
+  animation: fadeInRight 1.2s ease-in;
+}
+
+@keyframes fadeInRight {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
 .blog__grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -48,6 +61,20 @@
   max-height: 70vh;
   overflow-y: scroll;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: 0 0 6px inset rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--yellow-color);
+  border-radius: 100vw;
+}
+
 .blog__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
